# chatServer

./: .gitignore
ChatApp/: CMakeLists.txt  clickedlabel.cpp  clickedlabel.h  global.cpp  global.h  httpmgr.cpp  httpmgr.h  login.cpp  login.h  login.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  project-chat_za_CN.ts  register.cpp  register.h  register.ui  resetdialog.cpp  resetdialog.h  resetdialog.ui  singleton.h  tcpmgr.cpp  tcpmgr.h  timerbtn.cpp  timerbtn.h  usermgr.h
ChatApp/res/: images.qrc  rc.qrc
ChatApp/res/images/: logo.rc
ChatApp/style/: stylesheet.qss
ChatServer/: AsioIOServicePool.h  CServer.cpp  CServer.h  CallManager.cpp  CallManager.h  ChatServer.cpp  ChatServer.sln  ChatServer.vcxproj  ChatServer.vcxproj.filters  FileUploadManager.cpp  FileUploadManager.h  KafkaMgr.cpp  KafkaMgr.h  LogicSystem.cpp  LogicSystem.h  RedisMgr.h  StatusGrpcClient.cpp  StatusGrpcClient.h  TaskThreadPool.cpp  TaskThreadPool.h  config.ini  const.h
GateServer/: CServer.cpp  CServer.h  ConfigMgr.h  GateServer.cpp  GateServer.sln  GateServer.vcxproj  GateServer.vcxproj.filters  HttpConnection.cpp  HttpConnection.h  KafkaMgr.cpp  KafkaMgr.h  LogicSystem.cpp  MySqlDao.cpp  MySqlDao.h  MysqlMgr.cpp  MysqlMgr.h  RedisMgr.cpp  RedisMgr.h  StatusGrpcClient.cpp  StatusGrpcClient.h  VarifyGrpcClient.cpp  VarifyGrpcClient.h  config.ini  const.h
StatusServer/: AsioIOServicePool.cpp  ConfigMgr.cpp  MySqlDao.cpp  PropertySheet.props  RedisMgr.h  Singleton.h  StatusServer.cpp  StatusServer.sln  StatusServer.vcxproj  StatusServer.vcxproj.filters  StatusServiceImpl.cpp  StatusServiceImpl.h  config.ini  const.h  message.proto
VarifyServer/: config.json  const.js  email.js  package-lock.json  package.json  proto.js  redis.js  server.js
client/: chatdialog.cpp  chatdialog.h  chatpage.cpp  chatpage.h  chatpage.ui  global.h  llfcchat.pro  rc.qrc  rtcbridge.cpp  rtcbridge.h  tcpmgr.cpp  tcpmgr.h
client/static/: rtc.js  webrtc.html
